--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,3 @@
-header{}
+header{background-color: rgb(11, 1, 1);text-align: center;font-size: large;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifs;-webkit-text-fill-color: antiquewhite;padding-top: 0%;}
+h3{padding: left -13px;font-size: large ;font-family: inherit;color: rgb(30, 30, 67);}
+body{background-color:lightcyan;}
